--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
+    "@ionic/storage": "^2.2.0",
     "cordova-plugin-inappbrowser": "^3.1.0",
     "cordova-plugin-x-socialsharing": "^5.4.7",
+    "cordova-sqlite-storage": "^3.3.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
@@ -63,7 +65,8 @@
   "cordova": {
     "plugins": {
       "cordova-plugin-inappbrowser": {},
-      "cordova-plugin-x-socialsharing": {}
+      "cordova-plugin-x-socialsharing": {},
+      "cordova-sqlite-storage": {}
     }
   }
 }
